--- a/test/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
+++ b/test/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
@@ -10,7 +10,6 @@
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <PackageId>SolrExpress.Solr4.UnitTests</PackageId>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-    <RuntimeFrameworkVersion>1.0.4</RuntimeFrameworkVersion>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
@@ -18,12 +17,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\SolrExpress.Solr4\SolrExpress.Solr4.csproj" />
+    <ProjectReference Include="..\SolrExpress.Utility\SolrExpress.Utility.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <PackageReference Include="Moq" Version="4.7.8" />
+    <PackageReference Include="Moq" Version="4.7.99" />
     <PackageReference Include="System.Diagnostics.TraceSource" Version="4.3.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
   </ItemGroup>
