--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 language: csharp
 solution: SolrExpress.sln
-
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-      dotnet: 1.0.1
-      mono: latest
+mono: none
+dotnet: 1.1
+dist: trusty
+os: linux
 
 branches:
   only:
@@ -16,6 +12,6 @@ branches:
 
 script:
   - dotnet restore
-  - dotnet test test/SolrExpress.UnitTests --verbosity minimal --framework "netcoreapp1.1"
-  - dotnet test test/SolrExpress.Solr4.UnitTests --verbosity minimal --framework "netcoreapp1.1"
-  - dotnet test test/SolrExpress.Solr5.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test ./test/SolrExpress.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test ./test/SolrExpress.Solr4.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test ./test/SolrExpress.Solr5.UnitTests --verbosity minimal --framework "netcoreapp1.1"
