--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: csharp
 solution: SolrExpress.sln
-mono: none
-dotnet: 1.1
-dist: trusty
-os: linux
+
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+      dotnet: 1.0.1
+      mono: none
 
 branches:
   only:
@@ -12,6 +16,6 @@ branches:
 
 script:
   - dotnet restore
-  - dotnet test ./test/SolrExpress.UnitTests --verbosity minimal --framework "netcoreapp1.1"
-  - dotnet test ./test/SolrExpress.Solr4.UnitTests --verbosity minimal --framework "netcoreapp1.1"
-  - dotnet test ./test/SolrExpress.Solr5.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test test/SolrExpress.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test test/SolrExpress.Solr4.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test test/SolrExpress.Solr5.UnitTests --verbosity minimal --framework "netcoreapp1.1"
