--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ branches:
 
 script:
   - dotnet restore
-  - dotnet test test/SolrExpress.UnitTests --verbosity minimal --framework "netcoreapp1.1"
-  - dotnet test test/SolrExpress.Solr4.UnitTests --verbosity minimal --framework "netcoreapp1.1"
-  - dotnet test test/SolrExpress.Solr5.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test ./test/SolrExpress.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test ./test/SolrExpress.Solr4.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test ./test/SolrExpress.Solr5.UnitTests --verbosity minimal --framework "netcoreapp1.1"
