--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: csharp
 solution: SolrExpress.sln
-
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-      dotnet: 1.0.1
-      mono: none
+os: linux
+dist: trusty
+sudo: false
+dotnet: 1.1.0
+mono: none
+env:
+  global:
+    - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+    - DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
 branches:
   only:
@@ -16,6 +17,6 @@ branches:
 
 script:
   - dotnet restore
-  - dotnet test ./test/SolrExpress.UnitTests --verbosity minimal --framework "netcoreapp1.1"
-  - dotnet test ./test/SolrExpress.Solr4.UnitTests --verbosity minimal --framework "netcoreapp1.1"
-  - dotnet test ./test/SolrExpress.Solr5.UnitTests --verbosity minimal --framework "netcoreapp1.1"
+  - dotnet test ./test/SolrExpress.UnitTests --verbosity minimal --framework "netcoreapp1.1" --configuration release
+  - dotnet test ./test/SolrExpress.Solr4.UnitTests --verbosity minimal --framework "netcoreapp1.1" --configuration release
+  - dotnet test ./test/SolrExpress.Solr5.UnitTests --verbosity minimal --framework "netcoreapp1.1" --configuration release
