--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ branches:
 
 script:
   - dotnet restore
-  - dotnet test ./test/SolrExpress.UnitTests --verbosity minimal --framework "netcoreapp1.1" --configuration release
-  - dotnet test ./test/SolrExpress.Solr4.UnitTests --verbosity minimal --framework "netcoreapp1.1" --configuration release
-  - dotnet test ./test/SolrExpress.Solr5.UnitTests --verbosity minimal --framework "netcoreapp1.1" --configuration release
+  - dotnet test ./test/SolrExpress.UnitTests/SolrExpress.UnitTests.csproj --verbosity minimal --framework "netcoreapp1.1" --configuration release
+  - dotnet test ./test/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj --verbosity minimal --framework "netcoreapp1.1" --configuration release
+  - dotnet test ./test/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj --verbosity minimal --framework "netcoreapp1.1" --configuration release
