--- a/test/SolrExpress.Utility/SolrExpress.Utility.csproj
+++ b/test/SolrExpress.Utility/SolrExpress.Utility.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;net46;netcoreapp1.1</TargetFrameworks>
-    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>../../Key.snk</AssemblyOriginatorKeyFile>
+    <SignAssembly>true</SignAssembly>
+    <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <AssemblyOriginatorKeyFile>../../Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
