--- a/src/SolrExpress.DI.SimpleInjector/SolrExpress.DI.SimpleInjector.csproj
+++ b/src/SolrExpress.DI.SimpleInjector/SolrExpress.DI.SimpleInjector.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>A simple and lightweight query .NET library for Solr, in a controlled, buildable and fail fast way. DI using Simple Injector mechanism</Description>
+    <Description>A simple and lightweight query .NET library for Solr, in a controlled, buildable and fail fast way.
+Provider for Simple injector Dependency Injection.</Description>
     <VersionPrefix>5.0.0</VersionPrefix>
     <Authors>diego.lb</Authors>
     <TargetFrameworks>net45;net46;netstandard1.6</TargetFrameworks>
