--- a/src/SolrExpress.Solr4/SolrExpress.Solr4.csproj
+++ b/src/SolrExpress.Solr4/SolrExpress.Solr4.csproj
@@ -1,7 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>A simple and lightweight query .NET library for Solr, in a controlled, buildable and fail fast way for Sor 4.x</Description>
+    <Description>A simple and lightweight query .NET library for Solr, in a controlled, buildable and fail fast way.
+Provider for SOLR 4, full compatibility with the Solr 4.X.
+Implementation using default query handler and mechanism provided by request parameters.</Description>
     <VersionPrefix>5.0.0</VersionPrefix>
     <Authors>diego.lb</Authors>
     <TargetFrameworks>netstandard1.6;net45;net46</TargetFrameworks>
