--- a/benchmarks/SolrExpress.Benchmarks.Core/SolrExpress.Benchmarks.Core.csproj
+++ b/benchmarks/SolrExpress.Benchmarks.Core/SolrExpress.Benchmarks.Core.csproj
@@ -1,13 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net45;net46;netcoreapp1.1</TargetFrameworks>
     <AssemblyOriginatorKeyFile>../../Key.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
@@ -27,21 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\SolrExpress.Solr4\SolrExpress.Solr4.csproj" />
-    <ProjectReference Include="..\..\src\SolrExpress.Solr5\SolrExpress.Solr5.csproj" />
     <ProjectReference Include="..\..\src\SolrExpress\SolrExpress.csproj" />
-    <ProjectReference Include="..\SolrExpress.Benchmarks.Core\SolrExpress.Benchmarks.Core.csproj" />
     <ProjectReference Include="..\SolrExpress.Benchmarks.Helper\SolrExpress.Benchmarks.Helper.csproj" />
-    <ProjectReference Include="..\SolrExpress.Benchmarks.Solr4\SolrExpress.Benchmarks.Solr4.csproj" />
-    <ProjectReference Include="..\SolrExpress.Benchmarks.Solr5\SolrExpress.Benchmarks.Solr5.csproj" />
   </ItemGroup>
-
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <DefineConstants>$(DefineConstants);CLASSIC</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">
-    <DefineConstants>$(DefineConstants);CORE</DefineConstants>
-  </PropertyGroup>
 
 </Project>
