--- a/src/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/src/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -24,6 +24,10 @@ Implementation using default query handler and mechanism provided by JSON Reques
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Jil" Version="2.15.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SolrExpress\SolrExpress.csproj" />
   </ItemGroup>
 
