--- a/src/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/src/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -21,6 +21,7 @@ Implementation using default query handler and mechanism provided by JSON Reques
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
     <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
+    <Version>5.0.0-BETA1</Version>
   </PropertyGroup>
 
   <ItemGroup>
