--- a/src/SolrExpress.DI.Autofac/SolrExpress.DI.Autofac.csproj
+++ b/src/SolrExpress.DI.Autofac/SolrExpress.DI.Autofac.csproj
@@ -21,6 +21,7 @@ Provider for Autofac Dependency Injection.</Description>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <Version>5.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
