--- a/src/SolrExpress.DI.Ninject/SolrExpress.DI.Ninject.csproj
+++ b/src/SolrExpress.DI.Ninject/SolrExpress.DI.Ninject.csproj
@@ -19,6 +19,7 @@ Provider for Ninject Dependency Injection.</Description>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <Version>5.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
