--- a/src/SolrExpress.DI.SimpleInjector/SolrExpress.DI.SimpleInjector.csproj
+++ b/src/SolrExpress.DI.SimpleInjector/SolrExpress.DI.SimpleInjector.csproj
@@ -21,6 +21,7 @@ Provider for Simple injector Dependency Injection.</Description>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
     <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
+    <Version>5.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
