--- a/src/SolrExpress.DI.Ninject/SolrExpress.DI.Ninject.csproj
+++ b/src/SolrExpress.DI.Ninject/SolrExpress.DI.Ninject.csproj
@@ -5,7 +5,7 @@
 Provider for Ninject Dependency Injection.</Description>
     <VersionPrefix>5.0.0</VersionPrefix>
     <Authors>diego.lb</Authors>
-    <TargetFrameworks>net45;net46</TargetFrameworks>
+    <TargetFrameworks>net45;net46;net471</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AssemblyName>SolrExpress.DI.Ninject</AssemblyName>
     <AssemblyOriginatorKeyFile>../../Key.snk</AssemblyOriginatorKeyFile>
@@ -33,6 +33,12 @@ Provider for Ninject Dependency Injection.</Description>
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+    <PackageReference Include="Ninject" Version="3.2.2" />
+    <Reference Include="System" />
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net471' ">
     <PackageReference Include="Ninject" Version="3.2.2" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
