--- a/src/SolrExpress.DI.CoreClr/SolrExpress.DI.CoreClr.csproj
+++ b/src/SolrExpress.DI.CoreClr/SolrExpress.DI.CoreClr.csproj
@@ -5,7 +5,7 @@
 Provider for native .Net Core Dependency Injection.</Description>
     <VersionPrefix>5.0.0</VersionPrefix>
     <Authors>diego.lb</Authors>
-    <TargetFrameworks>net46;net471;netstandard1.6;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AssemblyName>SolrExpress.DI.CoreClr</AssemblyName>
     <AssemblyOriginatorKeyFile>../../Key.snk</AssemblyOriginatorKeyFile>
